--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,11 @@
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+    
         </div>
     </body>
 </html>
