--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Hecho con amor en Platzi</p>
                 <p> Haciendo cosas increibles</p>
+                <img src="imagenes/equipo.jpg" style="width: 100%"/>
             </div>
         </div>
     </body>
